handling missing data

--- a/data_science_analysis.ipynb
+++ b/data_science_analysis.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -152,6 +152,58 @@
    ],
    "source": [
     "# Check for missing values\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(missing_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Company', 'Job Title', 'Location', 'Job Type', 'Experience level',\n",
+       "       'Salary', 'Requirment of the company ', 'Facilities'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company                         0\n",
+      "Job Title                       0\n",
+      "Location                        0\n",
+      "Job Type                        0\n",
+      "Experience level              232\n",
+      "Salary                          0\n",
+      "Requirment of the company       0\n",
+      "Facilities                      0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove rows with missing values in the 'Salary' column\n",
+    "df = df.dropna(subset=['Salary'])\n",
+    "\n",
+    "# Verify the removal\n",
     "missing_values = df.isnull().sum()\n",
     "print(missing_values)"
    ]
