--- a/data_science_analysis.ipynb
+++ b/data_science_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,6 +204,197 @@
     "df = df.dropna(subset=['Salary'])\n",
     "\n",
     "# Verify the removal\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(missing_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Entry-level' nan 'Mid-level' 'Senior-level' 'Executive-level']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_values = df['Experience level'].unique()\n",
+    "print(unique_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         48K+ *\n",
+       "1         48K+ *\n",
+       "2         90K+ *\n",
+       "3         48K+ *\n",
+       "4          108K+\n",
+       "          ...   \n",
+       "3193      39K+ *\n",
+       "3194      92K+ *\n",
+       "3195      62K+ *\n",
+       "3196      39K+ *\n",
+       "3197     115K+ *\n",
+       "Name: Salary, Length: 3009, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Salary']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Salary'] = df['Salary'].str.replace(r'\\D', '', regex=True).astype(int) # Remove non-numeric characters and convert to integer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Salary'] = df['Salary'] * 1000 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        48000\n",
+       "1        48000\n",
+       "2        90000\n",
+       "3        48000\n",
+       "4       108000\n",
+       "         ...  \n",
+       "3193     39000\n",
+       "3194     92000\n",
+       "3195     62000\n",
+       "3196     39000\n",
+       "3197    115000\n",
+       "Name: Salary, Length: 3009, dtype: int32"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Salary']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experience level\n",
+      "Entry-level         49751.958225\n",
+      "Executive-level     98803.278689\n",
+      "Mid-level           66174.496644\n",
+      "Senior-level       105534.794521\n",
+      "Name: Salary, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "average_salaries = df.groupby('Experience level')['Salary'].mean() # Calculate the average salary for each experience level\n",
+    "print(average_salaries) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define salary ranges\n",
+    "salary_ranges = {\n",
+    "    'Entry-level': (0, 49751.96),\n",
+    "    'Mid-level': (49751.96, 66174.50),\n",
+    "    'Senior-level': (66174.50, 105534.79),\n",
+    "    'Executive-level': (105534.79, float('inf'))\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# Iterate over rows and impute missing experience levels\n",
+    "for index, row in df.iterrows():\n",
+    "    if pd.isnull(row['Experience level']):\n",
+    "        salary = row['Salary']\n",
+    "        for level, (min_salary, max_salary) in salary_ranges.items():\n",
+    "            if min_salary <= salary <= max_salary:\n",
+    "                df.at[index, 'Experience level'] = level\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Entry-level' 'Senior-level' 'Mid-level' 'Executive-level']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_values = df['Experience level'].unique()\n",
+    "print(unique_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Company                       0\n",
+      "Job Title                     0\n",
+      "Location                      0\n",
+      "Job Type                      0\n",
+      "Experience level              0\n",
+      "Salary                        0\n",
+      "Requirment of the company     0\n",
+      "Facilities                    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verify if there are any missing values\n",
     "missing_values = df.isnull().sum()\n",
     "print(missing_values)"
    ]
